[CSS] Preventing note actions extra from overflowing

--- a/public/assets/default_theme/css/pages/feeds.css
+++ b/public/assets/default_theme/css/pages/feeds.css
@@ -228,6 +228,7 @@ embed header {
     z-index: 1;
     display: flex;
     position: absolute;
+    right: 0; /* prevents details from overflowing */
     flex-direction: column;
     padding: var(--smaller);
     border: 2px solid var(--border);
